Modificación de los nombres y el título

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <body>
     <header>
-        <h1>*nombre del equipo*</h1>
-        <h2>*descripción del equipo*</h2>
+        <h1>*Las Tres*</h1>
+        <h2>*el portafolio de tres estudiantes sobreviviendo en diseño*</h2>
     </header>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
         <source src="media/video.webm" type="video/webm">
@@ -36,17 +36,17 @@
         <section id="equipo">
             <h3>Quiénes somos</h3>
             <div class="integrante">
-                <h4>INTEGRANTE UNO</h4>
+                <h4>Diana Catalán</h4>
                 <address><a href="mailto:mail@uc.cl">mail@uc.cl</a></address>
                 <blockquote>Good design is as little design as possible <cite>Dieter Rams</cite></blockquote>
             </div>
             <div class="integrante">
-                <h4>INTEGRANTE DOS</h4>
+                <h4>Sophia López</h4>
                 <address><a href="mailto:mail@uc.cl">mail@uc.cl</a></address>
                 <blockquote>Design is intelligence made visible <cite>Alina Wheeler</cite></blockquote>
             </div>
             <div class="integrante">
-                <h4>INTEGRANTE TRES</h4>
+                <h4>Josefina Maige</h4>
                 <address><a href="mailto:mail@uc.cl">mail@uc.cl</a></address>
                 <blockquote>A designer is a planner with an aesthetic sense <cite>Bruno Munari</cite></blockquote>
             </div>
