Incorporación de autor y descripción de página

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>*nombre*</title>
     <link rel="icon" type="image/png" href="media/favicon.png" />
     <!-- Metadatos genéricos -->
-    <meta name="description" content="descripción de la página">
+    <meta name="authors" content="Diana Catalán, Sophia López y Josefina Maige">
+    <meta name="description" content="Portafolio de las estudiantes de diseño Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso de Procesos de Producción, durante el segundo semestre del 2019.">
     <meta name="image" content="media/imagen.png">
     <!-- Metadatos Twitter -->
     <meta name="twitter:card" content="summary">
