--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <meta name="og:type" content="website">
     <!-- Ahora vinculamos el estilo -->
     <link rel="stylesheet" href="estilo.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
 
 <body>
     <header>
-        <h1>*Las Tres*</h1>
+        <h1 class="animated bounceIn delay 1s">*Las Tres*</h1>
         <h2>*el portafolio de tres estudiantes sobreviviendo en diseño*</h2>
     </header>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
