--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <header>
-        <h1 class=class="font-effect-anaglyph">*Las Tres*</h1>
+        <h1 class="font-effect-anaglyph">*Las Tres*</h1>
         <h2>*el portafolio de tres estudiantes sobreviviendo en diseño*</h2>
     </header>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
