--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <link rel="icon" type="image/png" href="media/favicon.png" />
     <!-- Metadatos genéricos -->
     <meta name="authors" content="Diana Catalán, Sophia López y Josefina Maige">
-    <meta name="description" content="Portafolio de las estudiantes de diseño Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso de Procesos de Producción, durante el segundo semestre del 2019.">
+    <meta name="description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso "Procesos de Producción", durante el segundo semestre del 2019.">
     <meta name="image" content="media/imagen.png">
     <!-- Metadatos Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="título de la página">
-    <meta name="twitter:description" content="descripción de la página">
+    <meta name="twitter:title" content="Tres Diseñadoras">
+    <meta name="twitter:description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso "Procesos de Producción", durante el segundo semestre del 2019.">
     <meta name="twitter:image:src" content="media/imagen.png">
     <!-- Metadatos Open Graph (Facebook, Pinterest & LinkedIn) -->
-    <meta name="og:title" content="título de la página">
-    <meta name="og:description" content="descripción de la página">
+    <meta name="og:title" content="Tres Diseñadoras">
+    <meta name="og:description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso "Procesos de Producción", durante el segundo semestre del 2019.>
     <meta name="og:image" content="media/imagen.png">
     <meta name="og:type" content="website">
+    <meta name="og:url" content="https://stlopez.github.io/catalan-lopez-maige/">    
     <!-- Ahora vinculamos el estilo -->
     <link rel="stylesheet" href="estilo.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
@@ -27,8 +28,8 @@
 
 <body>
     <header>
-        <h1 class="font-effect-anaglyph">*Las Tres*</h1>
-        <h2>*el portafolio de tres estudiantes sobreviviendo en diseño*</h2>
+        <h1 class="animated bounceIn delay 1s">TRES DISEÑADORAS</h1>
+        <h2>el portafolio de tres estudiantes sobreviviendo en diseño</h2>
     </header>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
         <source src="media/video.webm" type="video/webm">
