--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <header>
-        <h1 class="animated bounceIn delay 1s">TRES DISEÑADORAS</h1>
+        <h1 class="font-effect-anaglyph">TRES DISEÑADORAS</h1>
         <h2>el portafolio de tres estudiantes sobreviviendo en diseño</h2>
     </header>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
