--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>*nombre*</title>
+    <title>Tres Diseñadoras</title>
     <link rel="icon" type="image/png" href="media/favicon.png" />
     <!-- Metadatos genéricos -->
     <meta name="authors" content="Diana Catalán, Sophia López y Josefina Maige">
@@ -40,17 +40,17 @@
             <h3>Quiénes somos</h3>
             <div class="integrante">
                 <h4>Diana Catalán</h4>
-                <address><a href="mailto:mail@uc.cl">mail@uc.cl</a></address>
+                <address><a href="mailto:mail@uc.cl">dacatalan@uc.cl</a></address>
                 <blockquote>Good design is as little design as possible <cite>Dieter Rams</cite></blockquote>
             </div>
             <div class="integrante">
                 <h4>Sophia López</h4>
-                <address><a href="mailto:mail@uc.cl">mail@uc.cl</a></address>
+                <address><a href="mailto:mail@uc.cl">stlopez@uc.cl</a></address>
                 <blockquote>Design is intelligence made visible <cite>Alina Wheeler</cite></blockquote>
             </div>
             <div class="integrante">
                 <h4>Josefina Maige</h4>
-                <address><a href="mailto:mail@uc.cl">mail@uc.cl</a></address>
+                <address><a href="mailto:mail@uc.cl">jmaige@uc.cl</a></address>
                 <blockquote>A designer is a planner with an aesthetic sense <cite>Bruno Munari</cite></blockquote>
             </div>
         </section>
