--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
             <div class="integrante">
                 <h4>Diana Catalán</h4>
                 <address><a href="mailto:mail@uc.cl">dacatalan@uc.cl</a></address>
-                <blockquote>Good design is as little design as possible <cite>Dieter Rams</cite></blockquote>
+                <blockquote>Mi línea es de textil y gráfico <cite>Dieter Rams</cite></blockquote>
             </div>
             <div class="integrante">
                 <h4>Sophia López</h4>
                 <address><a href="mailto:mail@uc.cl">stlopez@uc.cl</a></address>
-                <blockquote>Design is intelligence made visible <cite>Alina Wheeler</cite></blockquote>
+                <blockquote>Me interesa el cruce entre diseño y arte<cite>Alina Wheeler</cite></blockquote>
             </div>
             <div class="integrante">
                 <h4>Josefina Maige</h4>
                 <address><a href="mailto:mail@uc.cl">jmaige@uc.cl</a></address>
-                <blockquote>A designer is a planner with an aesthetic sense <cite>Bruno Munari</cite></blockquote>
+                <blockquote>Me interesa el diseño de packaging <cite>Bruno Munari</cite></blockquote>
             </div>
         </section>
         <section id="portafolio">
