--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="icon" type="image/png" href="media/favicon.png" />
     <!-- Metadatos genéricos -->
     <meta name="authors" content=" Diana Catalán, Sophia López y Josefina Maige ">
-    <meta name="description" content=" Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso &quot;Procesos de Producción&quot;, durante el segundo semestre del 2019.">
+    <meta name="description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso &quot;Procesos de Producción&quot;, durante el segundo semestre del 2019.">
     <meta name="image" content="media/imagen.png">
     <!-- Metadatos Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Tres Diseñadoras">
-    <meta name="twitter:description" content=" Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso "Procesos de Producción", durante el segundo semestre del 2019.">
+    <meta name="twitter:description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso &quot;Procesos de Producción&quot;, durante el segundo semestre del 2019.">
     <meta name="twitter:image:src" content="media/imagen.png">
     <!-- Metadatos Open Graph (Facebook, Pinterest & LinkedIn) -->
     <meta name="og:title" content=" Tres Diseñadoras">
-    <meta name="og:description" content=" Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso "Procesos de Producción", durante el segundo semestre del 2019.>
+    <meta name="og:description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso &quot;Procesos de Producción&quot;, durante el segundo semestre del 2019.>
     <meta name="og:image" content="media/imagen.png">
     <meta name="og:type" content="website">
     <meta name="og:url" content="https://stlopez.github.io/catalan-lopez-maige/">    
