--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <meta name="twitter:description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso &quot;Procesos de Producción&quot;, durante el segundo semestre del 2019.">
     <meta name="twitter:image:src" content="media/imagen.png">
     <!-- Metadatos Open Graph (Facebook, Pinterest & LinkedIn) -->
-    <meta name="og:title" content=" Tres Diseñadoras">
-    <meta name="og:description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso &quot;Procesos de Producción&quot;, durante el segundo semestre del 2019.>
-    <meta name="og:image" content="media/imagen.png">
-    <meta name="og:type" content="website">
-    <meta name="og:url" content="https://stlopez.github.io/catalan-lopez-maige/">    
+    <meta property="og:title" content=" Tres Diseñadoras">
+    <meta property="og:description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso &quot;Procesos de Producción&quot;, durante el segundo semestre del 2019.>
+    <meta property="og:image" content="media/imagen.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://stlopez.github.io/catalan-lopez-maige/">    
     <!-- Ahora vinculamos el estilo -->
     <link rel="stylesheet" href="estilo.css" type="text/css">
 </head>
