--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:image:src" content="media/imagen.png">
     <!-- Metadatos Open Graph (Facebook, Pinterest & LinkedIn) -->
     <meta property="og:title" content=" Tres Diseñadoras">
-    <meta property="og:description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso &quot;Procesos de Producción&quot;, durante el segundo semestre del 2019.>
+    <meta property="og:description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso &quot;Procesos de Producción&quot;, durante el segundo semestre del 2019.">
     <meta property="og:image" content="media/imagen.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://stlopez.github.io/catalan-lopez-maige/">    
