--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <h2>el portafolio de tres estudiantes sobreviviendo en diseño</h2>
     </header>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-        <source src="" type="video/webm">
-        <source src="" type="video/mp4">
+        <source src="media/video.webm" type="video/webm">
+        <source src="media/video.mp4" type="video/mp4">
     </video>
     <main>
         <section id="equipo">
