--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Tres Diseñadoras</title>
+    <title>3Diseñadoras</title>
     <link rel="icon" type="image/png" href="media/favicon.png" />
     <!-- Metadatos genéricos -->
     <meta name="authors" content=" Diana Catalán, Sophia López y Josefina Maige ">
@@ -12,11 +12,11 @@
     <meta name="image" content="media/imagen.png">
     <!-- Metadatos Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Tres Diseñadoras">
+    <meta name="twitter:title" content="3Diseñadoras">
     <meta name="twitter:description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso &quot;Procesos de Producción&quot;, durante el segundo semestre del 2019.">
     <meta name="twitter:image:src" content="media/imagen.png">
     <!-- Metadatos Open Graph (Facebook, Pinterest & LinkedIn) -->
-    <meta property="og:title" content=" Tres Diseñadoras">
+    <meta property="og:title" content=" 3Diseñadoras">
     <meta property="og:description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso &quot;Procesos de Producción&quot;, durante el segundo semestre del 2019.">
     <meta property="og:image" content="media/imagen.png">
     <meta property="og:type" content="website">
@@ -27,7 +27,7 @@
 
 <body>
     <header>
-        <h1 class="font-effect-anaglyph">TRES DISEÑADORAS</h1>
+        <h1 class="font-effect-anaglyph">3DISEÑADORAS</h1>
         <h2>el portafolio de tres estudiantes sobreviviendo en diseño</h2>
     </header>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
