--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
             <div class="integrante">
                 <h4>Diana Catalán</h4>
                 <address><a href="mailto:mail@uc.cl">dacatalan@uc.cl</a></address>
-                <blockquote>Mi línea de trabajo es el diseño textil y gráfico <!--<cite>Alina Wheeler</cite>--></blockquote>
+                <blockquote>Graphic design is my passion <cite>Internet</cite></blockquote>
             </div>
             <div class="integrante">
                 <h4>Sophia López</h4>
                 <address><a href="mailto:mail@uc.cl">stlopez@uc.cl</a></address>
-                <blockquote>Me interesa el cruce entre diseño y arte<!--<cite>Alina Wheeler</cite>--></blockquote>
+                <blockquote>Dark necessities are part of my design< <cite>Red Hot Chili Peppers</cite> </blockquote>
             </div>
             <div class="integrante">
                 <h4>Josefina Maige</h4>
                 <address><a href="mailto:mail@uc.cl">jmaige@uc.cl</a></address>
-                <blockquote>Me interesa el diseño de packaging <!--<cite>Alina Wheeler</cite>--></blockquote>
+                <blockquote>Si tú lo deseas puedes volar< <cite>Esteban Trabajos</cite> </blockquote>
             </div>
         </section>
         <section id="portafolio">
