Prueba logo a link

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             <div class="integrante">
                 <h4>Sophia López</h4>
                 <address><a href="mailto:mail@uc.cl">stlopez@uc.cl</a></address>
-                <blockquote>Dark necessities are part of my design< <cite>Red Hot Chili Peppers</cite> </blockquote>
+                <blockquote>Dark necessities are part of my design <cite>Red Hot Chili Peppers</cite> </blockquote>
             </div>
             <div class="integrante">
                 <h4>Josefina Maige</h4>
                 <address><a href="mailto:mail@uc.cl">jmaige@uc.cl</a></address>
-                <blockquote>Si tú lo deseas puedes volar< <cite>Esteban Trabajos</cite> </blockquote>
+                <blockquote>Si tú lo deseas puedes volar <cite>Esteban Trabajos</cite> </blockquote>
             </div>
         </section>
         <section id="portafolio">
@@ -59,7 +59,7 @@
         </section>
     </main>
     <footer>
-        <p>Procesos de Producción · sección web · segundo semestre · 2019</p>
+        <p>Procesos de Producción · sección web · segundo semestre · 2019 <a href="http://www.instagram.com/3disenadorasportafolio" target="_blank">img src="https://image.flaticon.com/icons/png/128/462/462987.png" </p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
     <script>
