--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
     </main>
     <footer>
-        <p>Procesos de Producción · sección web · segundo semestre · 2019 <a href="http://www.instagram.com/3disenadorasportafolio" target="_blank">img src="https://image.flaticon.com/icons/png/128/462/462987.png" </p>
+        <p>Procesos de Producción · sección web · segundo semestre · 2019 <a href="http://www.instagram.com/3disenadorasportafolio" target="_blank"> <img src="https://image.flaticon.com/icons/png/128/462/462987.png"> </p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
     <script>
