--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>3Diseñadoras</title>
     <link rel="icon" type="image/png" href="media/favicon.png" />
     <!-- Metadatos genéricos -->
-    <meta name="authors" content=" Diana Catalán, Sophia López y Josefina Maige ">
+    <meta name="authors" content=" Diana Catalán, Sophia López y Josefina Maige. ">
     <meta name="description" content="Portafolio de las estudiantes de Diseño UC, Diana Catalán, Sophia López y Josefina Maige, realizado en el contexto del curso &quot;Procesos de Producción&quot;, durante el segundo semestre del 2019.">
     <meta name="image" content="media/imagen.png">
     <!-- Metadatos Twitter -->
